--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,24 @@ project.properties
 *.sublime-project
 *.sublime-workspace
 .sublimelinterrc
+
+# Dependencies
+/node_modules
+
+# Production
+/build
+
+# Generated files
+.docusaurus
+.cache-loader
+
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
