--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '7.4'  # specify your PHP version here
+          tools: none
+          php-version: '8.2'
 
       - name: Npm Install
         run: npm install
